(Retrofit from trunk) N°1182 fix overlapping table in console dashlets : now we have a scrolling bar if necessary [from revision 5168]
SVN:2.4[5169]

--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -1716,6 +1716,7 @@ td.layout_cell {
 .dashlet-content {
 	background: #fff;
 	margin:0;
+	overflow: auto;
 }
 table.prop_table {
     border-bottom: 2px solid #F9F9F1;
